# meals-django-cra-mantine-typed

./: .gitignore  README.md
api/: mypy.ini  pyproject.toml  pytest.ini
api/config/: .env.example  celery.py  settings.py  urls.py
api/main/: client.py  urls.py  views.py
api/main/lib/: client.py  responses.py  tokens.py
api/main/migrations/: 0001_initial.py  0002_user_email_confirmed_datetime_alter_user_email_and_more.py  0003_token.py  0004_recipe.py  0005_tag.py  0006_tag_recipes.py  0007_recipe_rating.py  0008_time.py  0009_alter_time_recipe.py  0010_recipe_servings.py  0011_recipe_notes.py  0012_equipment.py  0013_brand_food_unit_ingredient.py  0014_alter_ingredient_amount.py  0015_direction.py  0016_alter_direction_description.py  0017_direction_order_alter_direction_unique_together.py  0018_alter_direction_unique_together_and_more.py
api/main/models/: __init__.py  brand.py  direction.py  equipment.py  food.py  ingredient.py  recipe.py  tag.py  time.py  token.py  unit.py  user.py
api/main/tasks/: send_signup_confirmation.py
api/main/views/: __init__.py  brand_search.py  csrf_token.py  direction.py  direction_create.py  direction_destroy.py  direction_update.py  equipment.py  equipment_associate.py  equipment_dissociate.py  equipment_search.py  equipment_update.py  food_search.py  ingredient.py  ingredient_associate.py  ingredient_destroy.py  ingredient_update.py  login.py  logout.py  notes.py  notes_destroy.py  notes_update.py  rating.py  rating_destroy.py  rating_update.py  recipe.py  recipe_create.py  recipe_destroy.py  recipe_title_update.py  recipes.py  servings.py  servings_destroy.py  servings_update.py  signup.py  signup_confirmation.py  tag.py  tag_associate.py  tag_dissociate.py  tag_search.py  tag_update.py  (+5 more)
api/templates/main/email/: signup_confirmation.html  signup_confirmation.txt
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx  index.tsx  types.ts
web/src/components/: Directions.tsx  Equipment.tsx  Ingredients.tsx  LoginForm.tsx  Navbar.tsx  Notes.tsx  PageCenteredPaper.tsx  PageLayout.tsx  Rating.tsx  RecipeForm.tsx  RecipeList.tsx  RecipeSection.tsx  RecipeSectionHeader.tsx  RecipeSectionTitle.tsx  RecipeTags.tsx  RecipeTitle.tsx  RequireAuthn.tsx  RequireGuest.tsx  Servings.tsx  SignupForm.tsx  Subheader.tsx  Tags.tsx  Times.tsx
web/src/contexts/: AuthnContext.ts
web/src/hooks/: useApi.ts  useAuthn.ts  useDebouncedFunction.ts
web/src/lib/: utils.tsx
web/src/providers/: AuthnProvider.tsx
web/src/routes/: Dashboard.tsx  DirectionCreateForm.tsx  DirectionEditForm.tsx  Home.tsx  (+20 more)
(+4 files in other folders)
