[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Peter Havens <peter.havens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
flake8-logging-format = "^0.7.4"
bandit = "^1.7.4"
flake8-bugbear = "^22.7.1"
flake8-bandit = "^3.0.0"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
