[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Peter Havens <peter.havens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-environ = "^0.9.0"
django-extensions = "^3.2.0"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
flake8-logging-format = "^0.7.4"
bandit = "^1.7.4"
flake8-bugbear = "^22.7.1"
ipdb = "^0.13.9"
django-types = "^0.16.0"
djangorestframework-types = "^0.8.0"
celery-types = "^0.13.1"
watchdog = {extras = ["watchmedo"], version = "^2.1.9"}

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.8.2"
factory-boy = "^3.2.1"
pytest-celery = "^0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = "main/tests"

[tool.mypy]
files = ["config/**/*.py", "main/**/*.py"]
mypy_path = "stubs"
show_error_codes = true
strict = true
warn_unreachable = true
warn_unused_ignores = true
